# yaabarbashina-acs-tasks

./: README.txt  container.cpp  container.h  text.cpp  text.h  text_change_with_digits.cpp  text_change_with_digits.h  text_cyclic_shift.cpp  text_cyclic_shift.h  text_swap_elements.cpp  text_swap_elements.h  Схема.docx
hw-1/: CMakeLists.txt  README.txt  container.cpp  container.h  main.cpp  text.cpp  text.h  text_change_with_digits.cpp  text_change_with_digits.h  text_cyclic_shift.cpp  text_cyclic_shift.h  text_swap_elements.cpp  text_swap_elements.h
hw-1/tests/: out1.txt  out12.txt  out2.txt  out22.txt  out4.txt  out52.txt  test1.txt  test2.txt  test3.txt  test4.txt
hw-2/: CMakeLists.txt  README.md  container.cpp  container.h  digits.cpp  digits.h  main.cpp  rnd.h  shift.cpp  shift.h  swap.cpp  swap.h  text.cpp  text.h  Схема.docx
hw-2/tests/: out3.txt  out32.txt  out42.txt  out5.txt  test5.txt
hw-3/: README.md  container.py  digits.py  extender.py  main.py  rand_text.py  read_array.py  shift.py  swap.py  text.py  Схема.docx
hw-3/tests/: test4.txt  test5.txt
hw-3/tests/res/: out11.txt  out12.txt  out21.txt  out22.txt  out31.txt  out32.txt  out41.txt  out42.txt  out51.txt  out52.txt
hw-5/: CMakeLists.txt  README.md  main.cpp
tests/: out1.txt  out12.txt  out2.txt  out22.txt  out3.txt  out32.txt  out4.txt  out42.txt  out5.txt  out52.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
