cmake_minimum_required(VERSION 3.20)
project(untitled3)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled3 main.cpp container.cpp container.h text.h text_swap_elements.h text_cyclic_shift.h text_change_with_digits.h text_change_with_digits.cpp text_cyclic_shift.cpp text_swap_elements.cpp text.cpp)
